--- a/coremod/build.gradle
+++ b/coremod/build.gradle
@@ -1,21 +1,26 @@
 jar {
 	manifest {
 		attributes (
-				"FMLCorePlugin": 'btpos.dj2addons.DJ2ALoadingPlugin',
+				'FMLCorePlugin': 'btpos.dj2addons.core.DJ2ALoadingPlugin',
 				
 //				"TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
 //				"MixinConfigs": 'mixins.dj2addons.bootstrap.json'
 		)
-		archiveName 'dj2addons-core.jar'
+		archivesBaseName = 'dj2addonscore'
 	}
 	finalizedBy('reobfJar')
 }
 
 mixin {
 	//noinspection GroovyAssignabilityCheck
-	add sourceSets.main, "mixins.dj2addons.core.refmap.json"
+	add sourceSets.main, 'mixins.dj2addons.core.refmap.json'
 //    config 'mixins.dj2addons.json'
 //    	hotSwap = true
 }
 
+//build.finalizedBy('signJar')
+//
+//tasks.register('signJar', SignJar) {
+//
+//}
 // TODO sign jar
