--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ subprojects { Project proj ->
 	
 	archivesBaseName = 'dj2addons'
 	group = 'btpos.dj2addons'
-	version = '1.2.1.1.1'
+	version = '1.3.0-BETA'
 	
 	sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 	compileJava {
@@ -137,6 +137,27 @@ subprojects { Project proj ->
 			downloadSources = false
 			downloadJavadoc = true
 		}
+	}
+	
+	javadoc {
+		options.addBooleanOption('Xdoclint:none', true)
+		((StandardJavadocDocletOptions) options).tags(
+				'apiNote:a:API Note:',
+				'implSpec:a:Implementation Requirements:',
+				'implNote:a:Implementation Note:',
+				'reason:a:Reason:'
+				)
+	}
+	
+	tasks.register('sourcesJar', Jar) {
+		group = 'build_dj2addons'
+		from sourceSets.main.allJava
+		classifier = 'sources'
+	}
+	tasks.register('javadocJar', Jar) {
+		group = 'build_dj2addons'
+		from javadoc
+		classifier = 'javadoc'
 	}
 	
 }
