Tried to fix issue with Mixin loading, but looks like I'll just have to be a coremod/mod combo due to classloading restrictions...

--- a/coremod/build.gradle
+++ b/coremod/build.gradle
@@ -6,7 +6,7 @@ jar {
 				'FMLCorePlugin': 'btpos.dj2addons.core.DJ2ALoadingPlugin',
 				'Maven-Artifact': "btpos.dj2addons.core:DJ2AddonsCore:${version}",
 				'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
-//				"MixinConfigs": 'mixins.dj2addons.bootstrap.json'
+				"MixinConfigs": 'mixins.dj2addons.init.json'
 		)
 	}
 	finalizedBy('reobfJar')
